# section_browser

./: README.md  pyproject.toml
src/section_browser/: DATA_STORE.json  __init__.py  aisc_db.py  app.py  gui.py  main.py  qt_gui.py  test_w_sections.py  w_sections.py
tests/: TEST_DATA_STORE.json  test_app.py  test_w_sections.py
