[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "section_browser"
authors = [{name = "Connor Ferster", email = "connor@structuralpython.com"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: Apache Software License"]
dynamic = ["version", "description"]
dependencies = [
    "numpy >= 1.24.3",
    "pandas >= 2.0.1",
    "sectionproperties >= 2.1.5"
]

[project.urls]
Home = "https://github.com/StructuralPython/section_browser"

[project.optional-dependencies]
test = [
    "pytest >= 7.3.1",
]
