[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "section_browser"
authors = [{name = "Connor Ferster", email = "connor@structuralpython.com"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: Apache Software License"]
dynamic = ["version", "description"]
dependencies = [
    "numpy < 2.0.0",
    "pandas == 2.2.2",
    "sectionproperties == 2.0.3",
    "typer == 0.9.0",
    "PySide6 == 6.6.2",
    "openpyxl == 3.1.2",
    "scipy == 1.12.0",
    "rich == 13.7.1"
]

[project.urls]
Home = "https://github.com/StructuralPython/section_browser"

[project.scripts]
sectionbrowser = "section_browser.main:app"

[project.optional-dependencies]
test = [
    "pytest >= 7.3.1",
]

